Everything ready for M3

--- a/splatter/app/controllers/users_controller.rb.save.1
+++ b/splatter/app/controllers/users_controller.rb.save.1
@@ -50,61 +50,11 @@ class UsersController < ApplicationController
 
     head :no_content
   end
-  
-  #Get number of splatts
-  def splatts_count
-    map = %Q{ function() {
-      var length = 0;
-      if(this.splatts) {
-	 length = this.splatts.length
-      }
-      emit("count", length);
-    }
-    }
-		
-    reduce = %Q{ function(key, val) {
-      var data = 0;
-      val.forEach(function(v) {
-	data += v;
-      })
-      return data;
-    }
-    }		
-    User.map_reduce(map,reduce).out(inline: true)
-  end
 
-  # GET /users/splatts-feed/1
+  # GET /users/splatts-fed/1
   def splatts_feed
-    map = %Q{ function() {
-      if(this.splatts){
-        emit("feed", {"list": this.splatts})
-      }
-    }
-    }
-
-    reduce = %Q{ function(key, val) {
-      var myfeed = {"list": []}
-      val.forEach(function(v) {
-        myfeed.list = myfeed.list.concat(v.list)
-      })
-      return myfeed;
-      }
-    }
-
-    finalise = %Q{ function(key, val) {
-      var mylist = val.list;
-      if(mylist) {
-        mylist.sort(function(a, b) {
-	  return b.created_at - a.created_at});
-	}
-        return {"list": mylist};
-      }
-    }
-    
-    user = User.find(params[:id])
-    result = User.in(id: user.follow_ids).map_reduce(map, reduce).out(inline: true).finalize(finalise)
-    render json: result.entries[0][:value][:list]    
-
+    @feed = Splatt.find_by_sql("SELECT splatts.body, splatts.user_id, splatts.created_at FROM splatts JOIN follows ON follows.followed_id=splatts.user_id WHERE follows.follower_id = #{(params[:id])} ORDER BY created_at DESC")
+    render json: @feed
   end
 
   def add_follows
@@ -112,6 +62,7 @@ class UsersController < ApplicationController
     @follows = User.find(params[:follows_id])
 
     if @user.follows << @follows and @follows.followers << @user
+      head :no_content
       render json: @user.follows
     else
       render json: @user.errors, status: :unprocessable_entity
@@ -122,9 +73,9 @@ class UsersController < ApplicationController
     @user = User.find(params[:id])
     @follows = User.find(params[:follows_id])
 
-    if @user.follows.delete(@follows) and follows.followers.delete(@follows)
-      render json: @user.follows 
+    if @user.follows << 
       head :no_content
+      
     else
       render json: @user.errors, status: :unprocessable_entity
     end
@@ -137,7 +88,7 @@ class UsersController < ApplicationController
 
   def show_followers
     @user = User.find(params[:id])
-    render json: @user.followers
+    render json: @user.followed_by
   end
 
   def splatts
@@ -146,7 +97,7 @@ class UsersController < ApplicationController
   end
 
   private
-  def user_params(params)
+    def user_params(params)
     params.permit(:email, :password, :name, :blurb)
   end
 
